# dsa4e-assignment1

./: .gitignore  CMakeLists.txt
data/: input.txt  output.txt
src/ekabi/: implementation.cpp  interface.h  main.cpp
